- added CollectionResolver which is a more general version of ArrayResolver and ListResolver and supports in addition ICollection<Foo> and IEnumerable<Foo>

- fixed issue where dependencies would not be cleaned up when component creation failed

- fixed issue where startable component would be created twice when property dependency could not be resolved

- passing arguments to ILazyComponentLoader (see breakingchanges.txt)

- fixed bug that caused exception when proxied component and it's proxied property dependency shared interceptor

2.5.0 beta2 (2010-07-21)
==================

- added support for selecting components based on custom attributes and their properties. See Component.HasAttribute<T>() methods

- added WithService.DefaultInterface() to fluent API.IT matches Foo to IFoo, SuperFooExtended to IFoo and IFooExtended etc

- added support for CastleComponentAttribute in fluent Api. Also added helper filter method Component.IsCastleComponent

- added ability to specify interceptors selector as a service, not just as instance

- added ability to specify proxy hook in fluent API: 

- indexers on IKernel are now obsolete.

- added WithAppConfig() method to logging facility to point to loging configuration in AppDomain's config file (web.config or app.config)

- Restructured lifecycle concerns - introduced ICommissionConcern and IDecommissionConcern and favors them over old enum driven style.

- Fixed how contextual arguments are handled. Null is no longer considered a valid value (That would cause an exception later on, now it's ignored).

- Changed method DeferredStart on StartableFacility. It now does not take a bool parameter. A DeferredTryStart() method was introduced instead.

2.5.0 beta1 (2010-07-05)
==================
- Typed Factories will not implicitly pick default ITypedFactoryComponentSelector registered in the container anymore

- Obsoleted all the AddComponent* methods in favor of using Installers and fluent registration API
