@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <components>
-    <component id="cache_finder" service="Castle.Windsor.Tests.IResultFinder`1, Castle.Windsor.Tests"
-      type="Castle.Windsor.Tests.CacheResultFinder`1, Castle.Windsor.Tests"/>
-    <component id="db_finder" service="Castle.Windsor.Tests.IResultFinder`1, Castle.Windsor.Tests"
-      type="Castle.Windsor.Tests.DatabaseResultFinder`1, Castle.Windsor.Tests"/>
-    <component id="ws_finder" service="Castle.Windsor.Tests.IResultFinder`1, Castle.Windsor.Tests"
-      type="Castle.Windsor.Tests.WebServiceResultFinder`1, Castle.Windsor.Tests"/>
-    <component id="string_finder" service="Castle.Windsor.Tests.IResultFinder`1[[System.String, mscorlib]], Castle.Windsor.Tests"
-      type="Castle.Windsor.Tests.ResultFinderStringDecorator, Castle.Windsor.Tests"/>	
+    <component id="cache_finder" service="IResultFinder`1"
+      type="CacheResultFinder`1"/>
+    <component id="db_finder" service="IResultFinder`1"
+      type="DatabaseResultFinder`1"/>
+    <component id="ws_finder" service="IResultFinder`1"
+      type="WebServiceResultFinder`1"/>
+    <component id="string_finder" service="IResultFinder`1[[System.String, mscorlib]]"
+      type="ResultFinderStringDecorator"/>
   </components>
 </configuration>
